--- a/Home.html
+++ b/Home.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="jumbotron text-center">
-        <h1 id="jumboHeader">Adorable Random Football</h1>
+        <h2 id="jumboHeader">Adorable Random Football</h2>
     </div>
     <button type="button" class="btn btn-info gameInfo">How to Play</button>
     <button type="button" class="btn btn-info gameInfo">API's used</button>
@@ -21,6 +21,7 @@
         <button type="button" class="btn btn-lg btn-primary">Create Team 1</button>
         <button type="button" class="btn btn-lg btn-primary">Create Team 2</button>
     </div>
+
 
     <div class="container-fluid bg-3 text-center">
         <div class="row">
@@ -46,39 +47,7 @@
             <div class="row">
                 <div class="col-sm-2">
                     <p>Some text..</p>
-                    <img id="Player1" class="img-responsive" style="width:100%" alt="Player1">
-                </div>
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player2" class="img-responsive" style="width:100%" alt="Player2">
-                </div>
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player3" class="img-responsive" style="width:100%" alt="Player3">
-                </div>
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player4" class="img-responsive" style="width:100%" alt="Player4">
-                </div>
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player4" class="img-responsive" style="width:100%" alt="Player4">
-                </div>
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player4" class="img-responsive" style="width:100%" alt="Player4">
-                </div>
-            </div>
-        </div><br><br>
-    </div>
-
-    <div id="Team2">
-        <br><br><br><br>
-        <div class="container-fluid bg-3 text-center">
-            <div class="row">
-                <div class="col-sm-2">
-                    <p>Some text..</p>
-                    <img id="Player5" class="img-responsive" style="width:100%" alt="Player5">
+                    <img id="Player5" class="img-responsive" style="width:100px" alt="Player5">
                 </div>
 
                 <div class="col-sm-2">
@@ -88,7 +57,7 @@
 
                 <div class="col-sm-2">
                     <p>Some text..</p>
-                    <img id="Player6" class="img-responsive" style="width:100%" alt="Player6">
+                    <img id="Player6" class="img-responsive" style="width:100px" alt="Player6">
                 </div>
                 <div class="col-sm-2">
                     <p>Some text..</p>
@@ -102,10 +71,60 @@
 
                 <div class="col-sm-2">
                     <p>Some text..</p>
-                    <img id="Player8" class="img-responsive" style="width:100%" alt="Player8">
+                    <img id="Player8" class="img-responsive" style="width:100px" alt="Player8">
                 </div>
             </div>
         </div><br><br>
+    </div>
+
+    <div id="Team2">
+        <br><br><br><br>
+        <div class="container-fluid bg-3 text-center">
+            <div class="row">
+                <div class="col-sm-2">
+                    <!--<p id="Player1Name"></p>
+                    <img id="Player1" class="img-responsive" style="width:100%" alt="Player1">-->
+                </div>
+                <div class="col-sm-2">
+                    <p id="Player1Name"></p>
+                    <img id="Player2" class="img-responsive" style="width:100px" alt="Player2">
+                </div>
+                <div class="col-sm-2">
+                    <p id="Player1Name"></p>
+                    <img id="Player3" class="img-responsive" style="width:100px" alt="Player3">
+                </div>
+                <div class="col-sm-2">
+                    <p id="Player1Name"></p>
+                    <img id="Player4" class="img-responsive" style="width:100px" alt="Player4">
+                </div>
+                <div class="col-sm-2">
+                    <p id="Player1Name"></p>
+                    <img id="Player4" class="img-responsive" style="width:100px" alt="Player4">
+                </div>
+                <div class="col-sm-2">
+                    <!--<p id="Player1Name"></p>
+                    <img id="Player4" class="img-responsive" style="width:100%" alt="Player4">-->
+                </div>
+            </div>
+        </div><br><br>
+    </div>
+
+    <div id="Quarterback">
+        <div class="container-fluid bg-3 text-center">
+            <div class="row">
+                <div class="col-sm-3">
+                </div>
+                <div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
+                    <img id="Quarterback" class="img-responsive" style="width:150px" alt="Quarterback">
+                </div>
+                <div class="col-sm-2">
+                </div>
+                <div class="col-sm-3">
+                </div>
+            </div>
+        </div>
     </div>
 
 
