Added speical css class for player pics.

--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Home.css">
     <title>Adorable Football</title>
 </head>
 
@@ -49,20 +50,20 @@
             <div class="container-fluid bg-3 text-center">
                 <div class="row">
                     <div class="col-sm-2">
-                        <img id="Player5" style="width:100px" alt="Player5">
+                        <img id="Player5" class="player-picture" alt="Player5">
                     </div>
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player6" style="width:100px" alt="Player6">
+                        <img id="Player6" class="player-picture" alt="Player6">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player7" style="width:100px" alt="Player7">
+                        <img id="Player7" class="player-picture" alt="Player7">
                     </div>
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player8" style="width:100px" alt="Player8">
+                        <img id="Player8" class="player-picture" alt="Player8">
                     </div>
                 </div>
             </div><br><br>
@@ -75,16 +76,16 @@
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player1" style="width:100px" alt="Player1">
+                        <img id="Player1" class="player-picture" alt="Player1">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player2" style="width:100px" alt="Player2">
+                        <img id="Player2" class="player-picture" alt="Player2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player3" style="width:100px" alt="Player3">
+                        <img id="Player3" class="player-picture" alt="Player3">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player4" style="width:100px" alt="Player4">
+                        <img id="Player4" class="player-picture" alt="Player4">
                     </div>
                     <div class="col-sm-2">
                     </div>
@@ -101,7 +102,7 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="span4"><img src="Football.png" style="width:100px" alt="Football" /></div>
-                            <img id="Quarterback" style="width:150px" alt="Quarterback">
+                            <img id="Quarterback" class="quarterback" alt="Quarterback">
                         </div>
                         <div class="col-sm-2">
                         </div>
