--- a/Home.html
+++ b/Home.html
@@ -11,22 +11,52 @@
 <body ng-controller="footballController">
 
     <div class="jumbotron text-center">
-        <h1 id="jumboHeader">Adorable Random Football</h1>
+        <h1>Adorable Random Football</h1>
     </div>
 
-    <button type="button" class="btn btn-info gameInfo">How to Play</button>
-    <button type="button" class="btn btn-info gameInfo">API's used</button>
+    <button type="button" class="btn hudl-button">How to Play</button>
+    <button type="button" class="btn hudl-button">API's used</button>
     <h2 id="teamBattle" class="text-center"></h2>
 
-    <br><br>
+    <!--<br><br>-->
     <div class="container-fluid bg-3 text-center" ng-show="!startGame">
-        <button type="button" ng-click="gameStartedStepOne = true; startGame = true" class="btn btn-lg btn-primary">Start Game!</button>
+        <button type="button" ng-click="gameStartedStepOne = true; startGame = true" class="btn btn-lg hudl-button">Start Game!</button>
     </div>
 
     <div class="container-fluid bg-3 text-center" ng-cloak>
-        <button type="button" ng-show="gameStartedStepOne" ng-click="buildMyTeam(); gameStartedStepTwo = true" class="btn btn-lg btn-primary">Create your team</button>
-        <button type="button" ng-show="gameStartedStepTwo" ng-click="buildTheirTeam()" class="btn btn-lg btn-primary">Create opponent's team</button>
+        <button type="button" ng-show="gameStartedStepOne" ng-click="buildMyTeam(); gameStartedStepTwo = true" class="btn btn-lg hudl-button">Create your team</button>
+        <button type="button" ng-show="gameStartedStepTwo" ng-click="buildTheirTeam()" class="btn btn-lg hudl-button">Create opponent's team</button>
     </div><br><br>
+
+    <div class="container-fluid bg-3 text-center" ng-cloak>
+        <div class="row" ng-show="oppositionTeamBuild">
+            <div class="col-sm-3">
+            </div>
+            <div class="col-sm-2">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Home</h3>
+                    </div>
+                    <div id="myTeamScore" class="panel-body">
+                        0
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2">
+            </div>
+            <div class="col-sm-2">
+               <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Away</h3>
+                    </div>
+                    <div id="myTeamScore" class="panel-body">
+                        0
+                    </div>
+            </div>
+            <div class="col-sm-3">
+            </div>
+        </div>
+    </div>
 
     <div style="background: url(Field.png), center">
         <div class="container-fluid bg-3 text-center" ng-cloak ng-show="startGame">
@@ -45,47 +75,47 @@
             </div>
         </div>
 
-        <div id="OppositionTeam" ng-cloak ng-show="oppositionTeamBuild">
+        <div ng-cloak ng-show="oppositionTeamBuild">
             <br><br><br><br>
             <div class="container-fluid bg-3 text-center">
                 <div class="row">
                     <div class="col-sm-2">
-                        <img id="Player5" class="player-picture" alt="Player5">
+                        <img id="player5" class="player-picture" alt="Player5">
                     </div>
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player6" class="player-picture" alt="Player6">
+                        <img id="player6" class="player-picture" alt="Player6">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player7" class="player-picture" alt="Player7">
+                        <img id="player7" class="player-picture" alt="Player7">
                     </div>
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player8" class="player-picture" alt="Player8">
+                        <img id="player8" class="player-picture" alt="Player8">
                     </div>
                 </div>
             </div><br><br>
         </div>
 
-        <div id="MyTeam" ng-cloak ng-show="myTeamBuilt">
+        <div ng-cloak ng-show="myTeamBuilt">
             <br><br><br><br>
             <div class="container-fluid bg-3 text-center">
                 <div class="row">
                     <div class="col-sm-2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player1" class="player-picture" alt="Player1">
+                        <img id="player1" class="player-picture" alt="Player1">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player2" class="player-picture" alt="Player2">
+                        <img id="player2" class="player-picture" alt="Player2">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player3" class="player-picture" alt="Player3">
+                        <img id="player3" class="player-picture" alt="Player3">
                     </div>
                     <div class="col-sm-2">
-                        <img id="Player4" class="player-picture" alt="Player4">
+                        <img id="player4" class="player-picture" alt="Player4">
                     </div>
                     <div class="col-sm-2">
                     </div>
@@ -102,7 +132,7 @@
                         </div>
                         <div class="col-sm-2">
                             <div class="span4"><img src="Football.png" style="width:100px" alt="Football" /></div>
-                            <img id="Quarterback" class="quarterback" alt="Quarterback">
+                            <img id="quarterback" class="quarterback" alt="Quarterback">
                         </div>
                         <div class="col-sm-2">
                         </div>
