--- a/Home/Home.html
+++ b/Home/Home.html
@@ -14,8 +14,10 @@
         <h1>Adorable Random Football</h1>
     </div>
 
-    <button type="button" class="btn hudl-button">How to Play</button>
-    <button type="button" class="btn hudl-button">API's used</button>
+    <button type="button" class="btn hudl-button" ng-click="howToPlay()">How to Play</button>
+    <button type="button" class="btn hudl-button" ng-click="appStack()">App stack and APIs used</button>
+    <br><br>
+    <button type="button" class="btn hudl-button2" ng-click="restartGame()">Restart Game</button>
     <h2 id="teamBattle" class="text-center"></h2>
 
     <!--<br><br>-->
@@ -29,7 +31,7 @@
     </div><br><br>
 
     <div class="container-fluid bg-3 text-center" ng-cloak>
-        <div class="row" ng-show="oppositionTeamBuild">
+        <div class="row" ng-show="oppositionTeamBuilt">
             <div class="col-sm-3">
             </div>
             <div class="col-sm-2">
@@ -43,6 +45,7 @@
                 </div>
             </div>
             <div class="col-sm-2">
+                <button class="btn btn-lg hudl-button2" ng-click="playGame()">PLAY</button>
             </div>
             <div class="col-sm-2">
                 <div class="panel panel-primary">
@@ -76,7 +79,7 @@
                 </div>
             </div>
 
-            <div ng-cloak ng-show="oppositionTeamBuild">
+            <div ng-cloak ng-show="oppositionTeamBuilt">
                 <br><br><br><br>
                 <div class="container-fluid bg-3 text-center">
                     <div class="row">
@@ -144,8 +147,75 @@
                 </div><br><br><br>
             </div>
         </div>
+
+<!-- Play game modal -->
+<div class="modal fade" id="playGame" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLabel">Game Time!</h2>
+            </div>
+            <div class="modal-body">
+                <h2>Quarter 1</h2>
+
+                <h2>Quarter 2</h2>
+
+                <h2>Quarter 3</h2>
+
+                <h2>Quarter 4</h2>
+
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="showGameResults()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
+
+<!-- How to play modal -->
+<div class="modal fade" id="howToPlay" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLabel">How to play</h2>
+            </div>
+            <div class="modal-body">
+                <p>1: Start the game</p>
+                <p>2: Build the teams</p>
+                <p>3: Click PLAY</p>
+                <p>4: Have fun!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- App stack used modal -->
+<div class="modal fade" id="appStack" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLabel">App stack and APIs</h2>
+            </div>
+            <div class="modal-body">
+                <h3>App stack</h3>
+                <p>AngularJS</p>
+                <p>Bootstrap</p>
+                <h3>Open source APIs</h3>
+                Adorable Icons <a href="http://avatars.adorable.io/"> HERE</a><br>
+                Random team names <a href="https://randomuser.me/"> HERE</a>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -154,6 +224,6 @@
     <!-- Bootstrap examples https://getbootstrap.com/examples/theme/# -->
     <script src="Home.js"></script>
     <script src="../Services/TeamBuilderService.js"></script>
+    <script src="../Services/GameBuilderService.js"></script>
 </footer>
-
 </html>
