Update to wording

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -17,7 +17,7 @@
     <button type="button" class="btn hudl-button" ng-click="howToPlay()">How to Play</button>
     <button type="button" class="btn hudl-button" ng-click="appStack()">App stack and APIs used</button>
     <br><br>
-    <button ng-cloak type="button" class="btn hudl-button2" ng-click="restartGame()">Restart Game</button> Total Wins: {{totalWins}} | Total Losses: {{totalLosses}}
+    <button ng-cloak type="button" class="btn hudl-button2" ng-click="restartGame()">Play Again</button> Total Wins: {{totalWins}} | Total Losses: {{totalLosses}}
     <h2 id="teamBattle" class="text-center"></h2>
 
     <!--<br><br>-->
